--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ecoli"]
 	path = ecoli
 	url = git@github.com:loganylchen/testdata-ecoli-rRNA.git
+[submodule "yeast"]
+	path = yeast
+	url = git@github.com:loganylchen/testdata-yeast-rRNA.git
