--- a/.github/workflows/submodules-update.yml
+++ b/.github/workflows/submodules-update.yml
@@ -12,11 +12,12 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Pull & update submodules recursively
         run: |
-          git submodule update --init --recursive
           git submodule update --recursive --remote
 
       - name: Commit & push changes
