--- a/.github/workflows/submodules-update.yml
+++ b/.github/workflows/submodules-update.yml
@@ -4,6 +4,8 @@ name: Update submodules
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 1'
 
 jobs:
   # This workflow contains a single job called "update"
